--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,7 @@
 # .coveragerc to control coverage.py
 [run]
 branch = True
-source = dsproject_demo
+source = demo_dsproject
 # omit = bad_file.py
 
 [paths]
