--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ __pycache__/*
 .pydevproject
 .settings
 .idea
+.vscode
 tags
 
 # Package files
@@ -32,7 +33,7 @@ tags
 htmlcov/*
 .coverage
 .tox
-junit.xml
+junit*.xml
 coverage.xml
 .pytest_cache/
 
