--- a/setup.cfg
+++ b/setup.cfg
@@ -3,38 +3,49 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = dsproject-demo
-description = This is just a demonstration which was set up with `putup --dsproject dsproject-demo`
-author = Florian Wilhelm
-author-email = Florian.Wilhelm@inovex.de
-license = mit
-long-description = file: README.rst
-long-description-content-type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+name = demo-dsproject
+description = Demonstration of a project generated with the Data Science project extension of PyScaffold
+author = John Doe
+author-email = john.doe@example.com
+license = MIT
+long-description = file: README.md
+long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
+url = https://github.com/pyscaffold/pyscaffoldext-dsproject
+# Add here related links, for example:
 project-urls =
     Documentation = https://pyscaffold.org/
+#    Source = https://github.com/pyscaffold/pyscaffold/
+#    Changelog = https://pyscaffold.org/en/latest/changelog.html
+#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
+#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
+#    Download = https://pypi.org/project/PyScaffold/#files
+#    Twitter = https://twitter.com/PyScaffold
+
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
+
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python
 
+
 [options]
 zip_safe = False
-packages = find:
+packages = find_namespace:
 include_package_data = True
 package_dir =
     =src
-# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
-setup_requires = pyscaffold>=3.2a0,<3.3a0
-# Add here dependencies of your project (semicolon/line-separated), e.g.
-# install_requires = numpy; scipy
-# The usage of test_requires is discouraged, see `Dependency Management` docs
-# tests_require = pytest; pytest-cov
-# Require a specific Python version, e.g. Python 2.7 or >= 3.4
-# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
+
+# Require a min/specific Python version (comma-separated conditions)
+# python_requires = >=3.8
+
+# Add here dependencies of your project (line-separated)
+# TODO: Remove conditional dependencies according to `python_requires` above
+install_requires =
+    importlib-metadata; python_version<"3.8"
+
 
 [options.packages.find]
 where = src
@@ -43,53 +54,51 @@ exclude =
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
-# `pip install dsproject-demo[PDF]` like:
+# `pip install demo-dsproject[PDF]` like:
 # PDF = ReportLab; RXP
+
 # Add here test requirements (semicolon/line-separated)
 testing =
+    setuptools
     pytest
     pytest-cov
 
 [options.entry_points]
 # Add here console scripts like:
 # console_scripts =
-#     script_name = dsproject_demo.module:function
+#     script_name = demo_dsproject.module:function
 # For example:
 # console_scripts =
-#     fibonacci = dsproject_demo.skeleton:run
+#     fibonacci = demo_dsproject.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
-[test]
-# py.test options when running `python setup.py test`
-# addopts = --verbose
-extras = True
-
 [tool:pytest]
-# Options for py.test:
-# Specify command line options as you would do when invoking py.test directly.
+# Specify command line options as you would do when invoking pytest directly.
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
+# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
+#          Comment those flags to avoid this py.test issue.
 addopts =
-    --cov dsproject_demo --cov-report term-missing
+    --cov demo_dsproject --cov-report term-missing
     --verbose
 norecursedirs =
     dist
     build
     .tox
 testpaths = tests
+# Use pytest markers to select/deselect specific tests
+# markers =
+#     slow: mark tests as slow (deselect with '-m "not slow"')
+#     system: mark end-to-end system tests
 
 [aliases]
-dists = bdist_wheel
+dists = sdist bdist_wheel
 
 [bdist_wheel]
 # Use this option if your package is pure-python
 universal = 1
-
-[build_sphinx]
-source_dir = docs
-build_dir = build/sphinx
 
 [devpi:upload]
 # Options for the devpi: PyPI server and packaging tool
@@ -99,6 +108,10 @@ formats = bdist_wheel
 
 [flake8]
 # Some sane defaults for the code style checker flake8
+max-line-length = 88
+extend-ignore = E203, W503
+# ^  Black-compatible
+#    E203 and W503 have edge cases handled by black
 exclude =
     .tox
     build
@@ -109,9 +122,9 @@ exclude =
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
-version = 3.2.2
-package = dsproject_demo
+version = 4.0b2
+package = demo_dsproject
 extensions =
+    dsproject
     no_skeleton
     pre_commit
-    dsproject
