--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@
 minversion = 3.15
 envlist = default
 
+
 [testenv]
 description = invoke pytest to run automated tests
 isolated_build = True
@@ -34,6 +35,7 @@ deps =
 commands =
     clean: python -c 'from shutil import rmtree; rmtree("build", True); rmtree("dist", True)'
     build: python -m build .
+# By default `build` produces wheels, you can also explicitly use the flags `--sdist` and `--wheel`
 
 
 [testenv:{docs,doctests}]
@@ -44,7 +46,7 @@ setenv =
     docs: BUILD = html
     doctests: BUILD = doctest
 deps =
-    -r docs/requirements.txt
+    -r {toxinidir}/docs/requirements.txt
     # ^  requirements.txt shared with Read The Docs
 commands =
     sphinx-build -b {env:BUILD} -d "{env:BUILDDIR}/doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" {posargs}
