--- a/environment.yml
+++ b/environment.yml
@@ -3,29 +3,48 @@ channels:
   - defaults
   - conda-forge
   - pytorch
+  # - fastai
 dependencies:
   - python>=3.6
   - pip
+  # BASICS
   - numpy
   - scipy
   - pandas
-  - dask
-  - ipython
   - tqdm
   - click
+  # VISUALIZATION
   - matplotlib
   - seaborn
-  - altair
-  - statsmodels
-  - scikit-learn
-  - pytorch
-  - yellowbrick
+  # - altair
+  # - yellowbrick
+  # ML, STATS & DEEP LEARNING
+  # - statsmodels
+  # - scikit-learn
+  # - sktime
+  # - tslearn
+  # - xgboost
+  # - catboost
+  # - lightgbm
+  # - pytorch
+  # - fastai  # activate fastai channel above!
+  # - tensorflow
+  # - keras
+  # - spacy
+  # OTHER TOOLS
+  # - optuna
+  # - dask
   - pip:
-     - -e .[testing]  # install git checkout of demo-dsproject in editable mode
+     - -e .  # install git checkout of demo-dsproject in editable mode
      # add here only pip-packages that are not available in conda/conda-forge! E.g.:
-     - optuna
+     # - icecream
+     # - jax
+     # - numpyro
+     # - funsor
+     # - neptune-client
+     # - neptune-contrib
 
-  # for development only (could also be kept in a separate environment file)
+  # DEVELOPMENT ONLY PACKAGES (could also be kept in a separate environment file)
   - jupyterlab
   - pytest
   - pytest-cov
