--- a/setup.cfg
+++ b/setup.cfg
@@ -6,13 +6,13 @@
 name = demo-dsproject
 description = Demonstration of a project generated with the Data Science project extension of PyScaffold
 author = John Doe
-author-email = john.doe@example.com
+author_email = john.doe@example.com
 license = MIT
-long-description = file: README.md
-long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
+long_description = file: README.md
+long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
 url = https://github.com/pyscaffold/pyscaffoldext-dsproject
 # Add here related links, for example:
-project-urls =
+project_urls =
     Documentation = https://pyscaffold.org/
 #    Source = https://github.com/pyscaffold/pyscaffold/
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
@@ -102,13 +102,13 @@ universal = 1
 [devpi:upload]
 # Options for the devpi: PyPI server and packaging tool
 # VCS export must be deactivated since we are using setuptools-scm
-no-vcs = 1
+no_vcs = 1
 formats = bdist_wheel
 
 [flake8]
 # Some sane defaults for the code style checker flake8
-max-line-length = 88
-extend-ignore = E203, W503
+max_line_length = 88
+extend_ignore = E203, W503
 # ^  Black-compatible
 #    E203 and W503 have edge cases handled by black
 exclude =
@@ -121,7 +121,7 @@ exclude =
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
-version = 4.0
+version = 4.0.1
 package = demo_dsproject
 extensions =
     dsproject
