--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,15 @@
 # Tox configuration file
-# Read more under https://tox.readthedocs.org/
+# Read more under https://tox.readthedocs.io/
 # THIS SCRIPT IS SUPPOSED TO BE AN EXAMPLE. MODIFY IT ACCORDING TO YOUR NEEDS!
 
 [tox]
 minversion = 3.15
 envlist = default
+isolated_build = True
 
 
 [testenv]
-description = invoke pytest to run automated tests
-isolated_build = True
+description = Invoke pytest to run automated tests
 setenv =
     TOXINIDIR = {toxinidir}
 passenv =
@@ -20,13 +20,13 @@ commands =
     pytest {posargs}
 
 
-[testenv:{clean,build}]
+[testenv:{build,clean}]
 description =
-    Build (or clean) the package in isolation according to instructions in:
-    https://setuptools.readthedocs.io/en/latest/build_meta.html#how-to-use-it
-    https://github.com/pypa/pep517/issues/91
-    https://github.com/pypa/build
+    build: Build the package in isolation according to PEP517, see https://github.com/pypa/build
+    clean: Remove old distribution files and temporary build artifacts (./build and ./dist)
 # NOTE: build is still experimental, please refer to the links for updates/issues
+# https://setuptools.readthedocs.io/en/stable/build_meta.html#how-to-use-it
+# https://github.com/pypa/pep517/issues/91
 skip_install = True
 changedir = {toxinidir}
 deps =
@@ -37,18 +37,22 @@ commands =
 # By default `build` produces wheels, you can also explicitly use the flags `--sdist` and `--wheel`
 
 
-[testenv:{docs,doctests}]
-description = invoke sphinx-build to build the docs/run doctests
+[testenv:{docs,doctests,linkcheck}]
+description =
+    docs: Invoke sphinx-build to build the docs
+    doctests: Invoke sphinx-build to run doctests
+    linkcheck: Check for broken links in the documentation
 setenv =
     DOCSDIR = {toxinidir}/docs
     BUILDDIR = {toxinidir}/docs/_build
     docs: BUILD = html
     doctests: BUILD = doctest
+    linkcheck: BUILD = linkcheck
 deps =
     -r {toxinidir}/docs/requirements.txt
     # ^  requirements.txt shared with Read The Docs
 commands =
-    sphinx-build -b {env:BUILD} -d "{env:BUILDDIR}/doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" {posargs}
+    sphinx-build --color -b {env:BUILD} -d "{env:BUILDDIR}/doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" {posargs}
 
 
 [testenv:publish]
