--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 # This file is used to configure your project.
 # Read more about the various options under:
-# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
+# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
+# https://setuptools.pypa.io/en/latest/references/keywords.html
 
 [metadata]
 name = demo-dsproject
@@ -8,6 +9,7 @@ description = Demonstration of a project generated with the Data Science project
 author = John Doe
 author_email = john.doe@example.com
 license = MIT
+license_files = LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
 url = https://github.com/pyscaffold/pyscaffoldext-dsproject
@@ -25,7 +27,7 @@ project_urls =
 platforms = any
 
 # Add here all kinds of additional classifiers as defined under
-# https://pypi.python.org/pypi?%3Aaction=list_classifiers
+# https://pypi.org/classifiers/
 classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python
@@ -81,7 +83,7 @@ testing =
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
-#          Comment those flags to avoid this py.test issue.
+#          Comment those flags to avoid this pytest issue.
 addopts =
     --cov demo_dsproject --cov-report term-missing
     --verbose
@@ -94,10 +96,6 @@ testpaths = tests
 # markers =
 #     slow: mark tests as slow (deselect with '-m "not slow"')
 #     system: mark end-to-end system tests
-
-[bdist_wheel]
-# Use this option if your package is pure-python
-universal = 1
 
 [devpi:upload]
 # Options for the devpi: PyPI server and packaging tool
@@ -121,7 +119,7 @@ exclude =
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
-version = 4.0.2
+version = 4.1.1
 package = demo_dsproject
 extensions =
     dsproject
