--- a/setup.cfg
+++ b/setup.cfg
@@ -6,8 +6,8 @@
 [metadata]
 name = demo-dsproject
 description = Demonstration of a project generated with the Data Science project extension of PyScaffold
-author = John Doe
-author_email = john.doe@example.com
+author = Github Action
+author_email = github.action@example.com
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.md
@@ -119,7 +119,7 @@ exclude =
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
-version = 4.1.1
+version = 4.2.2
 package = demo_dsproject
 extensions =
     dsproject
